# Assistant

./: .env.example  .gitignore  LICENSE  README.md  demo.py  main.py  pyproject.toml
.claude/: settings.local.json
data/: mcp_market.json  skill_market.json  skill_state.json
src/: config.py  market_sources.py
src/agent/: core.py  prompts.py  tool.py
src/agent/tools/: __init__.py  weather.py
src/api/: index.html  server.py
src/cli/: app.py  commands.py
src/knowledge/: ingestion.py  manager.py  retrieval.py
src/llm/: client.py  models.py
src/mcp/: __init__.py  client.py  manager.py  market.py
src/memory/: long_term.py  profile.py  short_term.py
src/session/: __init__.py  manager.py
src/skill/: __init__.py  loader.py  market.py  registry.py
src/skill/skills/: code_review.py  translator.py
src/vector_store/: chunker.py  db.py
