[project]
name = "assistant"
version = "0.1.0"
description = "智能体助手 - RAG Agent with vector search"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.37.0",
    "psycopg[binary]>=3.2.0",

    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "pypdf>=5.0.0",
    "markdown-it-py>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-multipart>=0.0.20",
]
